<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.mindnotix.youthhub.ResetPasswordActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:keepScreenOn="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bg" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:src="@drawable/logo" />

                <ImageView
                    android:id="@+id/imgClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_close_black_24dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/relativeLayout"
                android:gravity="center"
                android:orientation="vertical">


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dim30"
                    android:fontFamily="sans-serif"
                    android:text="Reset your password"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittext_rectangle"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/edtNewPassword"
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/new_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textColorHint="@color/grey_400"
                            android:textSize="15sp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittext_rectangle"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/edtConfirmNewPassword"
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textColorHint="@color/grey_400"
                            android:textSize="15sp" />


                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="60dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/txtForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/forgot_password"
                        android:textColor="@color/Aqua"
                        android:textSize="12sp"
                        android:visibility="invisible" />

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:background="@drawable/rectangle_with_stroke_blue"
                        android:fontFamily="sans-serif"
                        android:text="Submit"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="normal" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background_color"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Do you have an account ? "
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/a"
            android:text=" Login"
            android:textColor="@color/black"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>
